# rag-slack-bot

./: .gitignore  Dockerfile  README.md  config.py  fly.toml  indexer.py  main.py  pyproject.toml  rag_engine.py  railway.toml  requirements.txt  slack_bot.py
app/: code_indexer.py  config.py  faq_generator.py  indexer.py  main.py  rag_engine.py  router.py  slack_bot.py
